# Jacks

./: .gitignore  AUTHORS  INSTALL  INSTALL_ubuntu  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  jacks.vpj  jacks.vpw
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
corelib/: Jacks.h  JacksClient.c  JacksClient.h  JacksEvent.c  JacksEvent.h  JacksEventQueue.c  JacksEventQueue.h  JacksExceptions.h  JacksHelper.c  JacksLatch.c  JacksLatch.h  JacksPort.c  JacksPort.h  JacksRbClient.c  JacksRbClient.h  JacksRbPort.c  JacksRbPort.h  Makefile.am  Makefile.in
corelib/lfds/: Makefile.am  Makefile.in
corelib/test/: Makefile.am  Makefile.in  floatsize.c  test_events.c  test_jackclient.c
corelib/test/jack-example-clients/: Makefile.am  Makefile.in  README
m4/: ax_oe_R.m4  ax_oe_go.m4  ax_oe_guile_devel.m4  ax_oe_jack.m4  ax_oe_openssl.m4  ax_oe_php_devel.m4  ax_oejava.m4  ax_ruby_devel.m4  lua.m4
modules/: Jacks.i  Makefile.am  Makefile.in  SndFile.i  jack_exceptions.h  jack_headers.h
modules/lua/: Jacks_lua_wrap.c  Makefile.am  Makefile.in  SndFile_lua_wrap.c
modules/lua/example-clients/: Makefile.am  Makefile.in  capture_client.lua  simple_client.lua
modules/lua/test/: Makefile.am  Makefile.in  script_runner  test_latency_callback.lua  test_swig_api.lua
modules/nodejs/: Makefile.am  Makefile_nodejs  package.json.in  wscript.in
modules/nodejs/src/: JacksNjClient.cc  JacksNjClient.h  JacksNjEvent.cc  JacksNjEvent.h  JacksNjLatencyRange.h  jsjacks.cc
modules/perl/: Build.PL.in  Changes  Jacks_perl5_wrap.c  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  Makefile.am  Makefile.in  OeLinkBin.PL.in  README  jacks.pm  jacks.pod.in
modules/perl/example-clients/: Makefile.am  Makefile.in  capture_client.pl  example_lat_cb.pl  hello.pl  latency_api.pl  latency_by_type_api.pl  latency_callback.pl  latency_callback_fd.pl  metro.pl  playc.pl  runme.pl  script_runner  simple_client.pl  test_swig_api.pl
modules/perl/t/: 00-load.t  Makefile.am  Makefile.in  script_runner  test_latency_range_api.t  test_swig_api.t
modules/python2/: Jacks_python_wrap.c  Makefile.am  Makefile.in  jacks.py
modules/python2/example-clients/: Makefile.am  Makefile.in
modules/python2/test/: Makefile.am  Makefile.in  script_runner  test_swig_api.py
modules/python3/: Jacks_python3_wrap.c  Makefile.am  Makefile.in  jacks.py  setup.py.in
modules/python3/example-clients/: Makefile  Makefile.am  Makefile.in  simple_client.py
modules/python3/test/: Makefile  Makefile.in  script_runner  test_swig_api.py
modules/ruby/: Jacks_ruby_wrap.c  Makefile.am  Makefile.in
modules/ruby/example-clients/: Makefile.am  Makefile.in  simple_client.rb
modules/ruby/test/: Makefile.am  Makefile.in  script_runner  test_swig_api.rb
